# hexlet_pytest

./: .gitignore  README.md  pyproject.toml
tests/: test_steck_pogran.py
