[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["qffo <075viktor@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
